# ModAvi26

Gian Pfäffli/: aerovale.ipynb  aerovale_demand.csv
Kevin Hänggi/: Excercise_Block_1.ipynb  aerovale_demand.csv
Mischa Meier/: DME.xlsx  Exercise 1 V2.ipynb  Exercise 1.html  Exercise 1.ipynb  dme_utils.py  pyproject.toml  terrestrial.ipynb
